# fcitx5-voice

./: .gitignore  CLAUDE.md  CMakeLists.txt  INSTALL_NOTES.md  README.md  TODO.md  pyproject.toml  standalone.py
daemon/: __init__.py  dbus_service.py  main.py  recorder.py  transcriber.py  ws_client.py
dbus/: org.fcitx.Fcitx5.Voice.xml
plugin/: CMakeLists.txt  dbus_client.cpp  dbus_client.h  voice-addon.conf.in  voice.conf  voice_engine.cpp  voice_engine.h  voice_engine_factory.cpp
scripts/: install.sh  uninstall.sh
systemd/: fcitx5-voice-daemon.service
tools/: generate_fixtures.py  generate_test_wav.py  mock_riva_server.py  replay_to_server.py  run_e2e.py  test_pipeline.py
