[project]
name = "fcitx5-voice"
version = "0.1.0"
description = "Voice input plugin for fcitx5 using Whisper speech recognition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "sounddevice>=0.5.1",
    "scipy>=1.15.0",
    "numpy>=2.0.0",
    "pydbus>=0.6.0",
    "PyGObject>=3.42.0",
]

[project.scripts]
fcitx5-voice-daemon = "daemon.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daemon"]

[tool.uv]
package = true
