[project]
name = "fcitx5-voice"
version = "0.2.0"
description = "Voice input plugin for fcitx5 using GPU-accelerated real-time ASR via NIM Riva"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets>=14.0",
    "sounddevice>=0.5.1",
    "numpy>=2.0.0",
    "pydbus>=0.6.0",
    "PyGObject>=3.42.0",
]

[project.scripts]
fcitx5-voice-daemon = "daemon.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daemon"]

[tool.uv]
package = true
